--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ span {
   border-radius: var(--border-radius-lg) !important;
 }
 
-.rounded-left{
+.rounded-left {
   border-radius: var(--border-radius-lg) 0 0 var(--border-radius-lg) !important;
 }
 
@@ -65,7 +65,7 @@ span {
   background-color: var(--background-primary) !important;
 }
 
-.bg-secondary{
+.bg-secondary {
   background-color: var(--background-secondary) !important;
 }
 
@@ -73,7 +73,7 @@ span {
   background-color: var(--accent) !important;
 }
 
-.opacity-50{
+.opacity-50 {
   opacity: 0.5;
 }
 
@@ -88,19 +88,19 @@ span {
 }
 
 .animate-load::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   border: 2px solid var(--text-color-primary);
-  border-radius: 50%; 
+  border-radius: 50%;
   animation: loading-after 1s ease 0.7s infinite;
 }
 
 .animate-load::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
@@ -114,12 +114,51 @@ span {
 
 .task {
   background-color: var(--background-secondary);
+  /* border-radius: 50%; */
   opacity: 0;
-  transform: scale(1.1) translateY(-25px);
-  animation: taskEnter 1s ease calc(var(--order) * 100ms) forwards;
+  /* animation: taskEnter 0.7s ease calc(var(--order) * 100ms) forwards; */
 }
 
-.task.completed p, .task.completed h1 {
+.task:nth-child(odd) {
+  animation: taskEnterOdd 0.7s ease calc(var(--order) * 100ms) forwards;
+}
+
+.task:nth-child(even) {
+  animation: taskEnterEven 0.7s ease calc(var(--order) * 120ms) forwards;
+}
+/* 
+@keyframes taskEnter {
+  from {
+    transform: scale(0.4) translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1) translateY(0);
+  }
+} */
+
+@keyframes taskEnterOdd {
+  from {
+    transform: scale(0.5) translateY(50px) skewX(10deg);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1) translateY(0) translateZ(1) skewX(0);
+  }
+}
+
+@keyframes taskEnterEven {
+  from {
+    transform: scale(0.5) translateY(50px) skewX(-10deg);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1) translateY(0) skewX(0);
+  }
+}
+
+.task.completed p,
+.task.completed h1 {
   text-decoration: line-through;
 }
 
@@ -148,7 +187,8 @@ label {
   color: var(--text-color-secondary);
 }
 
-input, select {
+input,
+select {
   background-color: var(--background-secondary);
   color: var(--text-color-primary);
   border-radius: var(--border-radius-lg);
@@ -167,7 +207,7 @@ input::placeholder {
   from {
     transform: scale(0.4);
   }
-  to{
+  to {
     opacity: 0;
     transform: scale(1);
   }
@@ -177,7 +217,7 @@ input::placeholder {
   from {
     transform: scale(0.3);
   }
-  to{
+  to {
     opacity: 0;
     transform: scale(0.7);
   }
@@ -187,15 +227,8 @@ input::placeholder {
   from {
     transform: scale(0.8);
   }
-  to{
+  to {
     opacity: 0;
     transform: scale(1.5);
-  }
-}
-
-@keyframes taskEnter {
-  to {
-    opacity: 1;
-    transform: scale(1) translateY(0);
   }
 }
