--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
   font-family: "Montserrat", sans-serif;
 }
 
+html {
+  background-color: var(--background-primary);
+}
+
 body {
   background-color: var(--background-primary) !important;
   /* min-height: 100vh; */
